--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="demo-fashion-store-single-product.html">
-                              <img src="https://via.placeholder.com/600x765" alt="" />
+                              <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                             <div class="shop-hover d-flex justify-content-center">
@@ -418,7 +418,7 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="demo-fashion-store-single-product.html">
-                              <img src="https://via.placeholder.com/600x765" alt="" />
+                              <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                             <div class="shop-hover d-flex justify-content-center">
@@ -443,7 +443,7 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="demo-fashion-store-single-product.html">
-                              <img src="https://via.placeholder.com/600x765" alt="" />
+                              <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                             <div class="shop-hover d-flex justify-content-center">
@@ -468,7 +468,7 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="demo-fashion-store-single-product.html">
-                              <img src="https://via.placeholder.com/600x765" alt="" />
+                              <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                             <div class="shop-hover d-flex justify-content-center">
@@ -493,7 +493,7 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="demo-fashion-store-single-product.html">
-                              <img src="https://via.placeholder.com/600x765" alt="" />
+                              <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                             <div class="shop-hover d-flex justify-content-center">
@@ -518,7 +518,7 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="demo-fashion-store-single-product.html">
-                              <img src="https://via.placeholder.com/600x765" alt="" />
+                              <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                             <div class="shop-hover d-flex justify-content-center">
@@ -543,7 +543,7 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="demo-fashion-store-single-product.html">
-                              <img src="https://via.placeholder.com/600x765" alt="" />
+                              <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                             <div class="shop-hover d-flex justify-content-center">
@@ -568,7 +568,7 @@
                         <div class="shop-box mb-10px">
                           <div class="shop-image mb-20px">
                             <a href="demo-fashion-store-single-product.html">
-                              <img src="https://via.placeholder.com/600x765" alt="" />
+                              <img src="https://lipsum.app/600x765" alt="" />
                               <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                             </a>
                             <div class="shop-hover d-flex justify-content-center">
