--- a/blog-detail.html
+++ b/blog-detail.html
@@ -162,75 +162,108 @@
       </nav>
     </header>
 
-    <section class="page-title-center-alignment cover-background" style="background-image: url(images/demo-decor-store-title-bg.jpg)">
+    <section class="one-fourth-screen bg-dark-gray ipad-top-space-margin sm-mb-50px" data-parallax-background-ratio="0.5" style="background-image: url(https://via.placeholder.com/1920x1100)"></section>
+
+    <section class="half-section">
       <div class="container">
-        <div class="row">
-          <div class="col-12 text-center position-relative page-title-extra-large">
-            <h1 class="alt-font d-inline-block fw-700 ls-minus-05px text-base-color mb-10px mt-3 md-mt-50px">Blog</h1>
-          </div>
-          <div class="col-12 breadcrumb breadcrumb-style-01 d-flex justify-content-center">
-            <ul>
-              <li><a href="demo-decor-store.html">Anasayfa</a></li>
-              <li>Blog detay</li>
-            </ul>
+        <div class="row justify-content-center" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
+          <div class="col-lg-9 last-paragraph-no-margin">
+            <h6 class="fw-600 text-dark-gray ls-minus-05px mb-15px">Strategies for streamlining logistics operations</h6>
+            <p>
+              Dive into the world of efficient global trade and streamlined logistics strategies with this informative blog post. Explore key tactics for optimizing supply chain performance, reducing lead times, and enhancing overall operational efficiency. Learn how businesses can leverage
+              technology, automation, and best practices to streamline their logistics operations and stay ahead in the competitive global marketplace.
+            </p>
+            <p class="mb-5">
+              Explore how businesses can optimize their global trade operations and logistics strategies to achieve greater efficiency, reduce costs, and enhance supply chain performance. This blog post delves into the importance of streamlining logistics processes, leveraging technology for
+              optimization, and implementing efficient global trade practices to drive success in the competitive marketplace.
+            </p>
+            <p>
+              Unlock the secrets to maximizing efficiency in global trade and logistics operations with this insightful blog post. Discover how businesses can streamline their supply chain processes, eliminate bottlenecks, and enhance operational efficiency through strategic logistics strategies.
+              From optimizing transportation routes to improving inventory management, learn how to streamline your logistics for success.
+            </p>
           </div>
         </div>
       </div>
     </section>
 
-    <section>
+    <section class="bg-very-light-gray position-relative sm-pb-20px">
       <div class="container">
-        <div class="row justify-content-center" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
-          <div class="col-lg-10">
-            <h4 class="alt-font fw-600 text-dark-gray w-90 md-w-100">Fashion is what you're offered four times a year by designers. And style is what you choose</h4>
+        <div class="row justify-content-center mb-1">
+          <div class="col-lg-7 text-center">
+            <h3 class="text-dark-gray fw-700 mb-20px">Diğer Bloglar</h3>
           </div>
-          <div class="col-lg-10 mb-6 sm-mb-35px">
-            <div class="row">
-              <div class="col-lg-6 last-paragraph-no-margin md-mb-30px">
-                <p class="w-90 lg-w-100">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt sed ante ullamcorper tempor. Maecenas semper odio amet libero luctus sodales. <strong class="text-dark-gray">Pellentesque sit amet convallis ante.</strong> Class aptent taciti sociosqu.
-                </p>
-              </div>
-              <div class="col-lg-6 last-paragraph-no-margin">
-                <p class="w-90 lg-w-100">
-                  <span class="text-decoration-line-bottom">Etiam at tristique arcu sit amet sagittis</span> lorem ut idex dignissim, scelerisque augue et, varius sem. Donec sem nulla, vestibulum egestas suscipit at, tincidunt at eros. Quisque blandit nisi sed nulla vulputate.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-10 mb-6 sm-mb-35px last-paragraph-no-margin text-center">
-            <img src="https://via.placeholder.com/987x550" class="mb-20px" alt="" />
-            <p class="pb-20px">Photography by Richard winters</p>
-            <div class="h-1px w-100 bg-extra-medium-gray"></div>
-          </div>
-          <div class="col-lg-10 mb-6 sm-mb-35px last-paragraph-no-margin">
-            <h5 class="alt-font fw-600 text-dark-gray w-95 md-w-100">Fashion you can buy but style you possess. The key to style is learning who you are which takes years</h5>
-            <p class="w-90 lg-w-100">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut nim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non , sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error.
-            </p>
-          </div>
-          <div class="col-lg-10 mb-6 sm-mb-35px">
-            <div class="row">
-              <div class="col-md-6 sm-mb-30px">
-                <img src="https://via.placeholder.com/800x1030" alt="" />
-              </div>
-              <div class="col-md-6">
-                <img src="https://via.placeholder.com/800x1030" alt="" />
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-10 last-paragraph-no-margin">
-            <h5 class="alt-font fw-600 text-dark-gray w-90 md-w-100">We finished our first sensor sweep of the neutral zone</h5>
-            <p class="mb-6 w-90 lg-w-100">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error.
-            </p>
-            <h5 class="alt-font fw-600 text-dark-gray w-90 md-w-100">You considered all your options you tried every alternative</h5>
-            <p class="w-90 lg-w-100">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non.
-            </p>
+        </div>
+        <div class="row">
+          <div class="col-12 p-md-0">
+            <ul
+              class="blog-grid blog-wrapper grid-loading grid grid-3col xl-grid-3col lg-grid-3col md-grid-2col sm-grid-2col xs-grid-1col gutter-extra-large"
+              data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 300, "easing": "easeOutQuad" }'
+            >
+              <li class="grid-sizer"></li>
+
+              <li class="grid-item">
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="#" class="d-block"><img src="https://via.placeholder.com/600x430" alt="" /></a>
+                  </div>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="#" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Trends shaping the logistics and transportation industry.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">30 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="demo-logistics-latest-blog.html" class="text-dark-gray text-decoration-line-bottom fw-600">Den viliamson</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="#"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">65</span></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+
+              <li class="grid-item">
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="#" class="d-block"><img src="https://via.placeholder.com/600x430" alt="" /></a>
+                  </div>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="#" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Technology integration in logistics processes.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">28 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="demo-logistics-latest-blog.html" class="text-dark-gray text-decoration-line-bottom fw-600">Hugh macleod</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="#"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">25</span></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+
+              <li class="grid-item">
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="#" class="d-block"><img src="https://via.placeholder.com/600x430" alt="" /></a>
+                  </div>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="#" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global trade and logistics and transportation strategies.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">26 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="demo-logistics-latest-blog.html" class="text-dark-gray text-decoration-line-bottom fw-600">Walton smith</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="#"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">30</span></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
