--- a/blog.html
+++ b/blog.html
@@ -178,98 +178,207 @@
       </div>
     </section>
 
-    <section class="pb-3 bg-gradient-very-light-gray lg-pb-40px md-pb-20px">
+    <section>
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 p-md-0">
             <ul
-              class="blog-classic blog-wrapper grid-loading grid grid-4col xl-grid-4col lg-grid-3col md-grid-2col sm-grid-2col xs-grid-1col gutter-extra-large"
-              data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 150, "easing": "easeOutQuad" }'>
+              class="blog-grid blog-wrapper grid-loading grid grid-3col xl-grid-3col lg-grid-3col md-grid-2col sm-grid-2col xs-grid-1col gutter-extra-large"
+              data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay":100, "staggervalue": 300, "easing": "easeOutQuad" }'
+            >
               <li class="grid-sizer"></li>
-
+              <!-- start blog item -->
               <li class="grid-item">
-                <div class="card bg-transparent border-0 h-100">
-                  <div class="blog-image position-relative overflow-hidden border-radius-4px">
-                    <a href="demo-decor-store-blog-single-classic.html"><img src="images/blog/blog.jpg" alt="" /></a>
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
                   </div>
-                  <div class="card-body px-0 pt-30px pb-30px xs-pb-15px">
-                    <a href="demo-decor-store-blog-single-classic.html" class="card-title alt-font fw-600 fs-17 lh-30 text-dark-gray d-inline-block w-95 sm-w-100">Dış Ticaretin Önemi</a>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Trends shaping the logistics and transportation industry.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">30 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Den viliamson</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">65</span></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </li>
               <!-- end blog item -->
               <!-- start blog item -->
               <li class="grid-item">
-                <div class="card bg-transparent border-0 h-100">
-                  <div class="blog-image position-relative overflow-hidden border-radius-4px">
-                    <a href="demo-decor-store-blog-single-classic.html"><img src="images/blog/blog.jpg" alt="" /></a>
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
                   </div>
-                  <div class="card-body px-0 pt-30px pb-30px xs-pb-15px">
-                    <a href="demo-decor-store-blog-single-classic.html" class="card-title alt-font fw-600 fs-17 lh-30 text-dark-gray d-inline-block w-95 sm-w-100">Dış Ticaretin Önemi</a>
-                  </div>
-                </div>
-              </li>
-              <!-- end blog item -->
-              <!-- start blog item -->
-              <li class="grid-item">
-                <div class="card bg-transparent border-0 h-100">
-                  <div class="blog-image position-relative overflow-hidden border-radius-4px">
-                    <a href="demo-decor-store-blog-single-classic.html"><img src="images/blog/blog.jpg" alt="" /></a>
-                  </div>
-                  <div class="card-body px-0 pt-30px pb-30px xs-pb-15px">
-                    <a href="demo-decor-store-blog-single-classic.html" class="card-title alt-font fw-600 fs-17 lh-30 text-dark-gray d-inline-block w-95 sm-w-100">Dış Ticaretin Önemi</a>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Technology integration in logistics processes.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">28 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Hugh macleod</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">25</span></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </li>
               <!-- end blog item -->
               <!-- start blog item -->
               <li class="grid-item">
-                <div class="card bg-transparent border-0 h-100">
-                  <div class="blog-image position-relative overflow-hidden border-radius-4px">
-                    <a href="demo-decor-store-blog-single-classic.html"><img src="images/blog/blog.jpg" alt="" /></a>
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
                   </div>
-                  <div class="card-body px-0 pt-30px pb-30px xs-pb-15px">
-                    <a href="demo-decor-store-blog-single-classic.html" class="card-title alt-font fw-600 fs-17 lh-30 text-dark-gray d-inline-block w-95 sm-w-100">Dış Ticaretin Önemi</a>
-                  </div>
-                </div>
-              </li>
-              <li class="grid-item">
-                <div class="card bg-transparent border-0 h-100">
-                  <div class="blog-image position-relative overflow-hidden border-radius-4px">
-                    <a href="demo-decor-store-blog-single-classic.html"><img src="images/blog/blog.jpg" alt="" /></a>
-                  </div>
-                  <div class="card-body px-0 pt-30px pb-30px xs-pb-15px">
-                    <a href="demo-decor-store-blog-single-classic.html" class="card-title alt-font fw-600 fs-17 lh-30 text-dark-gray d-inline-block w-95 sm-w-100">Dış Ticaretin Önemi</a>
-                  </div>
-                </div>
-              </li>
-              <li class="grid-item">
-                <div class="card bg-transparent border-0 h-100">
-                  <div class="blog-image position-relative overflow-hidden border-radius-4px">
-                    <a href="demo-decor-store-blog-single-classic.html"><img src="images/blog/blog.jpg" alt="" /></a>
-                  </div>
-                  <div class="card-body px-0 pt-30px pb-30px xs-pb-15px">
-                    <a href="demo-decor-store-blog-single-classic.html" class="card-title alt-font fw-600 fs-17 lh-30 text-dark-gray d-inline-block w-95 sm-w-100">Dış Ticaretin Önemi</a>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Global trade & logistics and transport strategies.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">26 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Walton smith</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">30</span></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </li>
+              <!-- end blog item -->
               <li class="grid-item">
-                <div class="card bg-transparent border-0 h-100">
-                  <div class="blog-image position-relative overflow-hidden border-radius-4px">
-                    <a href="demo-decor-store-blog-single-classic.html"><img src="images/blog/blog.jpg" alt="" /></a>
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
                   </div>
-                  <div class="card-body px-0 pt-30px pb-30px xs-pb-15px">
-                    <a href="demo-decor-store-blog-single-classic.html" class="card-title alt-font fw-600 fs-17 lh-30 text-dark-gray d-inline-block w-95 sm-w-100">Dış Ticaretin Önemi</a>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Security measures in supply chain management.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">30 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Den viliamson</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">65</span></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </li>
+              <!-- end blog item -->
+              <!-- start blog item -->
               <li class="grid-item">
-                <div class="card bg-transparent border-0 h-100">
-                  <div class="blog-image position-relative overflow-hidden border-radius-4px">
-                    <a href="demo-decor-store-blog-single-classic.html"><img src="images/blog/blog.jpg" alt="" /></a>
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
                   </div>
-                  <div class="card-body px-0 pt-30px pb-30px xs-pb-15px">
-                    <a href="demo-decor-store-blog-single-classic.html" class="card-title alt-font fw-600 fs-17 lh-30 text-dark-gray d-inline-block w-95 sm-w-100">Dış Ticaretin Önemi</a>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">The impact of e-Commerce on logistics.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">28 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Hugh macleod</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">25</span></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <!-- end blog item -->
+              <!-- start blog item -->
+              <li class="grid-item">
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
+                  </div>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">The future of autonomous vehicles in logistics.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">26 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Walton smith</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">30</span></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <!-- end blog item -->
+              <li class="grid-item">
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
+                  </div>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Collaborative logistics partnerships.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">30 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Den viliamson</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">65</span></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <!-- end blog item -->
+              <!-- start blog item -->
+              <li class="grid-item">
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
+                  </div>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Innovations in warehouse management systems.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">28 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Hugh macleod</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">25</span></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <!-- end blog item -->
+              <!-- start blog item -->
+              <li class="grid-item">
+                <div class="card border-0 border-radius-4px box-shadow-quadruple-large">
+                  <div class="blog-image">
+                    <a href="blog-detail.html" class="d-block"><img src="https://lipsum.app/600x400" alt="" /></a>
+                  </div>
+                  <div class="card-body p-13 md-p-11">
+                    <a href="blog-detail.html" class="card-title mb-15px fw-600 fs-20 text-dark-gray d-inline-block">Importance of visibility in supply chain.</a>
+                    <p>Lorem ipsum has been industry standard dummy text ever...</p>
+                    <div class="author d-flex justify-content-center align-items-center position-relative overflow-hidden fs-16">
+                      <div class="me-auto">
+                        <span class="blog-date d-inline-block text-dark-gray fw-600">26 Jul 2024</span>
+                        <div class="d-inline-block author-name">By <a href="blog-detail.html" class="text-dark-gray text-decoration-line-bottom fw-600">Walton smith</a></div>
+                      </div>
+                      <div class="like-count fs-15 fw-600">
+                        <a href="blog-detail.html"><i class="fa-regular fa-heart text-red"></i><span class="text-dark-gray align-middle">30</span></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </li>
