--- a/e-catalog.html
+++ b/e-catalog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="tr">
   <head>
-    <title>AZM Dış Ticaret</title>
+    <title>E-Katalog - AZM Dış Ticaret</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="ThemeZaa" />
